# marketsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.lua  simulation.lua  stocks.lua
src/: main.cpp
src/exchange/: account.cpp  account.h  accountcontroller.cpp  accountcontroller.h  arbitrator.cpp  arbitrator.h  configloader.cpp  configloader.h  controllers.h  exchange.cpp  exchange.h  exchangeworker.cpp  exchangeworker.h  logger.cpp  logger.h  marketcontroller.cpp  marketcontroller.h  offer.cpp  offer.h  offercontroller.cpp  offercontroller.h  stock.cpp  stock.h  stockcontroller.cpp  stockcontroller.h  symbols.h  tradeinterface.cpp  tradeinterface.h  utility.cpp  utility.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/simulation/: agent.cpp  agent.h  simulation.cpp  simulation.h
test/: test.cpp
test/exchange/: accountcontroller_tests.cpp  marketcontroller_tests.cpp  stockcontroller_tests.cpp
